@@ -1,6 +1,7 @@
 
 0.16 release
 
+	* don't restart the swarm after downloading metadata from magnet links
 	* lower the default tracker retry intervals
 	* support banning web seeds sending corrupt data
 	* don't let hung outgoing connection attempts block incoming connections
